RESOLVED FIXED227860
[Cocoa] Incorrect deprecation declaration for -[WKWebView closeAllMediaPresentations:]
https://bugs.webkit.org/show_bug.cgi?id=227860
Summary [Cocoa] Incorrect deprecation declaration for -[WKWebView closeAllMediaPresen...
Jer Noble
Reported 2021-07-11 10:47:34 PDT
[Cocoa] Incorrect deprecation declaration for -[WKWebView closeAllMediaPresentations:]
Attachments
Patch (5.27 KB, patch)
2021-07-11 10:53 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2021-07-11 10:48:02 PDT
Jer Noble
Comment 2 2021-07-11 10:53:26 PDT
Brady Eidson
Comment 3 2021-07-11 14:53:22 PDT
Comment on attachment 433290 [details] Patch What does this due to the swift case in betas that have shipped?
Jer Noble
Comment 4 2021-07-11 15:03:45 PDT
(In reply to Brady Eidson from comment #3) > Comment on attachment 433290 [details] > Patch > > What does this due to the swift case in betas that have shipped? It should restore the .closeAllMediaPresentations() method to the swift mapping header. The deprecated API declaration was never exposed to swift, so to swift code, it appeared as if we just removed the API entirely. See: http://codeworkshop.net/objc-diff/sdkdiffs/ios/15.0/WebKit.html
Brady Eidson
Comment 5 2021-07-11 17:29:35 PDT
Great, then the r+ comes with my r+ too :P
EWS
Comment 6 2021-07-12 10:10:32 PDT
Committed r279833 (239594@main): <https://commits.webkit.org/239594@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433290 [details].
Note You need to log in before you can comment on or make changes to this bug.