[Cocoa] Incorrect deprecation declaration for -[WKWebView closeAllMediaPresentations:] https://bugs.webkit.org/show_bug.cgi?id=227860 <rdar://80376777>

Reviewed by Sam Weinig.

Source/WebKit:

In r277645, we added a deprecation declaration for -closeAllMediaPresentations:completion, but
that API was never shipped in a release. The actual shipped API, -closeAllMediaPresentations,
was removed entirely, leading to bincompat crashes when binaries built against older SDKs are
run against newer OSs.

Correct the deprecated API declaration, and re-add support for -closeAllMediaPresentations.

* UIProcess/API/Cocoa/WKWebView.h:
* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView closeAllMediaPresentations]):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/WKWebViewCloseAllMediaPresentations.mm:
(TEST):


Canonical link: https://commits.webkit.org/239594@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279833 268f45cc-cd09-0410-ab3c-d52691b4dbfc